--- a/public/css/base-styles.css
+++ b/public/css/base-styles.css
@@ -24,11 +24,32 @@ header {
             display: inline-block;
             padding-left: 10px;
             margin-bottom: 0;
-        }
 
-        & li {
-            display: inline-block;
-            margin-right: 10px;
+            & .vertical-menu{
+                position: absolute;
+                width: 200px;
+                top: 100%;
+                left: 0;
+                display: none;
+                padding-left: 0px;
+
+                & li {
+                    margin-right: 0px;
+                    & a{
+                        border: solid 1px black;
+                    }
+                }
+            }
+
+            & li {
+                display: inline-block;
+                margin-right: 10px;
+                position: relative;
+
+                &:hover .vertical-menu{
+                    display: inline-block;
+                }
+            }
         }
     }
 }
