--- a/public/css/base-styles.css
+++ b/public/css/base-styles.css
@@ -1,3 +1,4 @@
+
 body,html {
     padding: 0;
     margin: 0;
@@ -37,6 +38,7 @@ header {
                     margin-right: 0px;
                     & a{
                         border: solid 1px black;
+                        width: 200px;
                     }
                 }
             }
